--- a/styles.css
+++ b/styles.css
@@ -24,5 +24,5 @@
   height: 50px;
   line-height: 50px;
   font-size: 18px;
-  background-color: #222 !important;
+  background-color: #FFF !important;
 }
