--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@
       left: 0;
       width: 100%;
       height: 150px;
-      background-color: #000;
+      background-color: #FFF;
       color: white;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       z-index: 1000;
-    padding: 20px;
+    padding: 50px;
     }
 
     body {
