--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,14 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 110px;
-      background-color: #FFF;
+      height: 100px;
+      background-color: #000;
       color: white;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       z-index: 1000;
-    padding: 50px;
+    padding: 20px;
     }
 
     body {
