--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
       justify-content: flex-start;
       z-index: 1000;
     padding: 20px;
+    font-family: 'Nunito', sans-serif;
     }
 
 body {
