--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background-color: #000;
+      background-color: #181c1b;
       color: white;
       display: flex;
       align-items: center;
