--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
       left: 0;
       width: 100%;
       height: 100px;
-      background-color: #181c1b;
+      background-color: #000;/*181c1b;*/
       color: white;
       display: flex;
       align-items: center;
@@ -12,7 +12,7 @@
       z-index: 1000;
     padding: 20px;
     font-family: 'Nunito', sans-serif;
-    font-size: 32px;
+    font-size: 36px;
     }
 
 body {
@@ -23,5 +23,5 @@ body {
 
     .content {
       height: 2000px; /* just to demonstrate scrolling */
-      background: linear-gradient(#eee, #ccc);
+      background: linear-gradient(#181c1b, #000);
     }
