--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     margin: 0;
     padding-top: 150px; /* offset to prevent content from being hidden */
     font-family: 'Nunito', sans-serif;
+    background-color: #181c1b;
     }
 
     .content {
