--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
       font-weight: 500;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
       text-align: center;
+    }/*.banner*/
 
 body {
     margin: 0;
