--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,17 @@
 .topnav {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100px;
-      background-color: #000;/*181c1b;*/
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      z-index: 1000;
-    padding: 20px;
-    font-family: 'Nunito', sans-serif;
-    font-size: 40px;
-    }
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000;
+  color: white;
+  padding: 20px;
+  font-size: 40px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}/*.topnav*/
     
 .banner {
       background-color: #2a4730; /* Subtle green tint */
