--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     margin: 0;
     padding-top: 150px; /* offset to prevent content from being hidden */
     font-family: 'Nunito', sans-serif;
-    background-color: #000;
+    background-color: #1a1a1a;/*slate black*/
     }
 
     .content {
