--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@
   box-sizing: border-box;
 }
 
+/* Nav bar at top of page */
 .topnav {
-      position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
