--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,13 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-}/*.topnav*/
+}
+    
+.logo {
+  width: 50px;
+  height: 50px;
+  margin: 0 50px 0 0;
+}
     
 .banner {
       background-color: #2a4730; /* Subtle green tint */
@@ -42,7 +48,7 @@ body {
     padding-top: 150px; /* offset to prevent content from being hidden */
     font-family: 'Nunito', sans-serif;
     background-color: var(--black-80);/*slate black*/
-}/*body*/
+}
 
     .content {
       height: 2000px; /* just to demonstrate scrolling */
