--- a/styles.css
+++ b/styles.css
@@ -12,24 +12,39 @@
 
 /* Nav bar at top of page */
 .topnav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #000;
-  color: white;
-  padding: 20px;
-  font-size: 16px;
-  z-index: 1000;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: #f5f5f5;
 }
     
 .logo {
   width: 30px;
   height: 30px;
-  margin: 0 50px 0 0;
+  margin-right: 20px;
+}
+
+
+.title {
+  flex-grow: 1;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 25px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger span {
+  height: 3px;
+  background: black;
+  border-radius: 2px;
 }
     
 .banner {
@@ -41,7 +56,7 @@
       font-weight: 500;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
       text-align: center;
-    }/*.banner*/
+    }
 
 body {
     margin: 0;
