--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
+  /*display: flex;*/
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
