--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  /*display: flex;*/
+  display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
   background-color: #000;
   color: white;
+  width: 100%;
 }
     
 .logo {
