--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 20px;
   background-color: #000;
   color: white;
   width: 100%;
@@ -41,14 +41,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 20px;
-  height: 15px;
+  width: 25px;
+  height: 20px;
   cursor: pointer;
   color: white;
 }
 
 .burger span {
-  height: 3px;
+  height: 1px;
   background: gray;
   border-radius: 2px;
 }
