--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
+  padding: 10px;
   background-color: #000;
   color: white;
   width: 100%;
@@ -42,9 +42,9 @@
   flex-direction: column;
   justify-content: space-between;
   width: 20px;
-  height: 15px;
+  height: 10px;
   cursor: pointer;
-  color: white;
+  color: red;
 }
 
 .burger span {
