--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@
   font-size: 32px;
   font-weight: 500;
   text-align: center;
+  color: white;
+}
+.subbanner {
+  color: white;
+  text-align: center;
 }
 
 body {
