--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@
 }
 .banner {
   opacity: 0;
-      transform: translateY(100px);
-      animation: slideFadeIn 1s ease-out forwards;
+      transform: translateY(300px);
+      animation: slideFadeIn 2s ease-out forwards;
 }
 @keyframes slideFadeIn {
       to {
@@ -71,6 +71,11 @@
   font-weight: 500;
   text-align: center;
   color: var(--almost-white);
+}
+.subbanner {
+  opacity: 0;
+      transform: translateY(300px);
+      animation: slideFadeIn 2s ease-out forwards;
 }
 .subbanner {
   font-size: 20px;
