--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ body {
 /* Navigation menu */
 .nav-menu {
   position: fixed;
-  top: 20;
+  top: 50px;
   left: 0;
   width: 100%;
   display: none;
