--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ body {
   width: 100%;
   max-width: 600px;
   margin-top: 600px;
+  display: block;
 }
 
 .image-wrapper img {
@@ -142,8 +143,8 @@ body {
 
 .image-wrapper::after {
   content: '';
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
+  /*position: absolute;*/
+  /*top: 0; left: 0; right: 0; bottom: 0;*/
   background: radial-gradient(ellipse at center, transparent 60%, black 100%);
   pointer-events: none;
 }
