--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ body {
     ellipse at center,
     rgba(0, 0, 0, 0) 60%,
     rgba(0, 0, 0, 0.8) 85%,
-    rgba(0, 0, 0, 1) 100%
+    #121212 100%
   );
   z-index: 2;
 }
